<?xml version="1.0" encoding="utf-8" ?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/home_fragment">

    <fragment
        android:id="@+id/home_fragment"
        android:name="com.mzcloud.djt.advanceddjt.ui.farmmain.FarmMainFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/farm_main_fragment" />

    <fragment
        android:id="@+id/trend_fragment"
        android:name="com.mzcloud.djt.advanceddjt.ui.farmmain.QueryFragment"
        android:label="@string/menu_trend"
        tools:layout="@layout/farm_trend_fragment" />

    <fragment
        android:id="@+id/legal_fragment"
        android:name="com.mzcloud.djt.advanceddjt.ui.farmmain.LegalFragment"
        android:label="@string/menu_work"
        tools:layout="@layout/legal_fragment" />

    <fragment
        android:id="@+id/supervision_fragment"
        android:name="com.mzcloud.djt.advanceddjt.ui.farmmain.SupervisionFragment"
        android:label="@string/menu_wiki"
        tools:layout="@layout/supervision_fragment" />

    <fragment
        android:id="@+id/mine_fragment"
        android:name="com.mzcloud.djt.advanceddjt.ui.farmmain.MineFragment"
        android:label="@string/menu_me"
        tools:layout="@layout/mine_fragment" />
</navigation>