<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.mzcloud.djt.advanceddjt.viewmodels.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_ic_margin_left"
            android:layout_marginRight="@dimen/login_ic_margin_left"
            android:layout_marginBottom="@dimen/login_content_margin_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/login_logo"
                android:layout_width="@dimen/login_logo_size"
                android:layout_height="@dimen/login_logo_size"
                android:contentDescription="@string/describe_ic_login_logo"
                android:src="@mipmap/login_logo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_ic_margin_top"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_logo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_et_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/hint_login_account"
                    android:drawableStart="@drawable/ic_login_account"
                    android:hint="@string/hint_login_account"
                    android:inputType="number"
                    android:maxLength="@integer/login_account_max_length"
                    android:maxLines="@integer/login_max_line"
                    android:text="@{viewModel.lastLoginUser.account}"
                    android:textSize="@dimen/login_edit_text_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_ic_margin_top"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_account">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/hint_login_password"
                    android:drawableStart="@drawable/ic_login_password"
                    android:hint="@string/hint_login_password"
                    android:inputType="textPassword"
                    android:maxLength="@integer/login_password_max_length"
                    android:maxLines="@integer/login_max_line"
                    android:text="@{viewModel.lastLoginUser.password}"
                    android:textSize="@dimen/login_edit_text_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login_btn_login"
                style="@style/btn_active"
                android:layout_marginTop="@dimen/login_btn_margin_top"
                android:text="@string/btn_login"
                app:layout_constraintTop_toBottomOf="@+id/til_password" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>